--- a/iLoveBetsRus/iLoveBetsRus/Base.lproj/Main.storyboard
+++ b/iLoveBetsRus/iLoveBetsRus/Base.lproj/Main.storyboard
@@ -297,7 +297,7 @@
     <resources>
         <image name="1. BettingTips" width="152.5" height="129"/>
         <image name="2. Statistics" width="101.66666412353516" height="86"/>
-        <image name="3. Chat" width="153" height="110"/>
+        <image name="3. Chat" width="101.66666412353516" height="86"/>
         <image name="4. E-Mail" width="101.66666412353516" height="86"/>
         <image name="5. Help" width="101.66666412353516" height="86"/>
         <image name="6. AboutUS" width="101.66666412353516" height="86"/>
