Настроены Constraints для LaunchScreen

--- a/iLoveBetsRus/iLoveBetsRus/Base.lproj/Main.storyboard
+++ b/iLoveBetsRus/iLoveBetsRus/Base.lproj/Main.storyboard
@@ -155,7 +155,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="812" y="-222.63868065967017"/>
+            <point key="canvasLocation" x="811.59420289855075" y="-222.99107142857142"/>
         </scene>
         <!--About Us View Controller-->
         <scene sceneID="RZU-No-Rto">
