--- a/iLoveBetsRus/iLoveBetsRus/Base.lproj/LaunchScreen.storyboard
+++ b/iLoveBetsRus/iLoveBetsRus/Base.lproj/LaunchScreen.storyboard
@@ -16,14 +16,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="2yx-Ki-Xkl">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MainScreenBackground" translatesAutoresizingMaskIntoConstraints="NO" id="2yx-Ki-Xkl">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Спортивные прогнозы" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iMZ-Bc-wJZ">
+                                <rect key="frame" x="16" y="267" width="382" height="372"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="51"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <constraints>
                             <constraint firstItem="2yx-Ki-Xkl" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="8kH-gv-t7C"/>
+                            <constraint firstItem="iMZ-Bc-wJZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="223" id="BlG-1t-tRB"/>
+                            <constraint firstItem="iMZ-Bc-wJZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="ELT-jb-AmZ"/>
                             <constraint firstItem="2yx-Ki-Xkl" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="WKH-4l-MXR"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="iMZ-Bc-wJZ" secondAttribute="bottom" constant="223" id="bsP-Sd-oQ1"/>
                             <constraint firstItem="2yx-Ki-Xkl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="e1L-nA-RkE"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="iMZ-Bc-wJZ" secondAttribute="trailing" constant="16" id="hit-n0-Wph"/>
                             <constraint firstAttribute="bottom" secondItem="2yx-Ki-Xkl" secondAttribute="bottom" id="yXD-TO-ZJL"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -31,10 +41,10 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52.173913043478265" y="375"/>
+            <point key="canvasLocation" x="50.625" y="375"/>
         </scene>
     </scenes>
     <resources>
-        <image name="LaunchScreen" width="320" height="568"/>
+        <image name="MainScreenBackground" width="320" height="568"/>
     </resources>
 </document>
